# Final-Project-UPF-V1.2

Final Project/real_estate_toolkit/: README.md  main.py  pyproject.toml
Final Project/real_estate_toolkit/src/real_estate_toolkit/data/: __init__.py  cleaner.py  descriptor.py  loader.py
